Change to /user/me endpoint; Correction on documentation
